src/objects/Clinical_Apt_Proc_Loader__c.object
<CustomObject>
    <description>Table used to load apt and procedure relationship table.  Should not really be used outside of sandbox.  In production,  a center would always clone the default apt/procedure list</description>
    <fields>
        <fullName>Apt_Name__c</fullName>
        <label>Apt Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proc_Name__c</fullName>
        <label>Proc Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Clinical Apt Proc Loader</label>
    <nameField>
        <displayFormat>CAPL-{0000}</displayFormat>
        <label>Clinical Apt Proc Loader Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Apt Proc Loader</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>